--- a/web/package.json
+++ b/web/package.json
@@ -17,8 +17,10 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
+    "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "idb-keyval": "^6.2.2",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
     "pdf-lib": "^1.17.1",
